auth-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      tier: backend
  template:
    metadata:
      labels:
        app: auth
        tier: backend
    spec:
      containers:
        - name: auth
          image: gauravd70/ecommerce-auth:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet: 
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
