auth-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    app: auth
    tier: backend
  ports:
    - portocol: TCP
      port: 80
      targetPort: 8080
